# cartograms

./: .gitignore  CNAME  README.md  app.css  app.js  catogram.js  constants.js  export.js  generate.py  index.0fa66d25.js  index.0fa66d25.js.map  index.259cb415.js  index.259cb415.js.map  index.322eb2d4.css  index.322eb2d4.css.map  index.47a6c879.js  index.47a6c879.js.map  index.55e30301.js  index.55e30301.js.map  index.5baa4167.js  index.5baa4167.js.map  index.6666393f.js  index.6666393f.js.map  index.75a90472.css  index.75a90472.css.map  index.7c7ec874.css  index.7c7ec874.css.map  index.82832682.js  index.82832682.js.map  index.89239ed8.js  index.89239ed8.js.map  index.8e102bd1.js  index.8e102bd1.js.map  index.9274d8eb.css  index.9274d8eb.css.map  index.979c05f2.js  index.979c05f2.js.map  index.9fad107b.js  index.9fad107b.js.map  index.af25c2f7.js  (+9 more)
core/: catogram.js  constants.js  events.js  export.js  export.py  plot.js  shaper.js  util.js
data/: country-code.csv  iso-3166-1.csv  world-population-unpd-flat.csv
data/base/2018/v1/: geo.json  topo.json
data/base/2018/v2/: borders.csv  geo.json  projected_geo.json  topo.json
data/output/v1/: borders.csv  cells.csv  geo.json  projected_geo.json  topo.json
data/population/: unpd.csv
data/population/2018/v1/: topo.json
data/population/2018/v2/: geo.json  projected_geo.json
data/size/: borders.csv  cells.csv  grid.asc
documentation/: README.md
generator/: base_cartogram.py  driver.py
