[tool.poetry]
name = "owid-cartograms"
version = "0.1.0"
description = "A tool to generate Our World In Data style cartograms"
authors = ["Adesh Nalpet Adimurthy <390.adesh@gmail.com>", "Ike Saunders <ike@ourworldindata.org>", "Daniel Bachler <daniel.bachler@ourworldindata.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "owid_cartograms"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = ">=2.0,<3.0"
geojson = ">=2.5,<3.0"
geos = ">=0.2,<1.0"
json5 = ">=0.9,<1.0"
jsonschema = ">=3.2,<4.0"
lxml = ">=4.6,<5.0"
matplotlib = ">=3.4,<4.0"
matplotlib-inline = ">=0.1,<1.0"
numpy = ">=1.21.2,<1.22.0"
owid-catalog = ">=0.2,<1.0"
pandas = ">=1.4,<2.0"
pycountry = ">=22.3,<23.0"
PyMySQL = ">=1.0,<2.0"
requests = ">=2.26.0,<2.27.0"
seaborn = ">=0.11.2,<0.12.0"
world-bank-data = ">=0.1,<1.0"
Shapely = ">=1.7,<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
